--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev" ]
   pull_request:
     branches: [ "main" ]
 
@@ -11,12 +11,20 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    
+    - name: Install build essentials (for make/gcc)
+      run: sudo apt-get update && sudo apt-get install -y build-essential
+    
+    - name: Build C runtime
+      working-directory: ./src/runtime-c
+      run: make
+    
+    - name: Build Rust project
       run: cargo build --verbose
+    
     - name: Run tests
       run: cargo test --verbose
